https://github.com/Hesim97/Xeber.git

--- a/Xeber/Views/Admin/Create.cshtml
+++ b/Xeber/Views/Admin/Create.cshtml
@@ -7,7 +7,7 @@
 @section scripts{
     <script src="~/lib/ckeditor/ckeditor.js"></script>
     <script>
-        CKEDITOR.replace("NewsContent","NewsContentRu","NewsContentEn");
+        CKEDITOR.replace("NewsContent","","");
     </script>
 }
 
