--- a/Xeber/Views/NewsLangs/Delete.cshtml
+++ b/Xeber/Views/NewsLangs/Delete.cshtml
@@ -7,9 +7,8 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bu xeberi silmek istediyinizden eminsiniz?</h3>
 <div>
-    <h4>NewsLang</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -58,7 +57,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Sil" class="btn btn-danger" /> |
+        <a class="btn btn-success" asp-action="Index">Geri</a>
     </form>
 </div>
