--- a/Xeber/Views/Shared/_Slider.cshtml
+++ b/Xeber/Views/Shared/_Slider.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<News>
+﻿@model IEnumerable<NewsLang>
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer _localizer
 <div id="carouselExampleCaptions" class=" carousel slide" data-ride="carousel">
@@ -13,7 +13,6 @@
             {
                 <li data-target="#carouselExampleCaptions" data-slide-to="@i"></li>
             }
-
         }
     </ol>
     <div class="carousel-inner">
@@ -23,10 +22,10 @@
             if (index == 0)
             {
                 <div class="carousel-item active">
-                    <a asp-controller="News" asp-action="Details" asp-route-id="@item.Id">
-                        <img src="~/img/@item.NewsImg" class="d-block " style="width:100%;height:400px" alt="@item.NewsTitle">
+                    <a target="_blank" asp-controller="News" asp-action="Details" asp-route-id="@item.Id">
+                        <img src="~/img/@item.News.NewsImg" class="d-block " style="width:100%;height:400px" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h4 style=" border-radius:10px;background-color:white" class=" text-dark">@_localizer[@item.NewsTitle]</h4>
+                            <h4 style=" border-radius:10px;background-color:white" class=" text-dark">@item.NewsTitle</h4>
                             <h2 style="text-align:center;width:400px;border-radius:10px;background-color:black" class=" text-danger">
                                 <time datetime="@item.CreateDate.ToString("yyyy-MM-dd")">@item.CreateDate.ToString("dd MMMM yyyy")</time>
                             </h2>
@@ -38,8 +37,8 @@
             else
             {
                 <div class="carousel-item">
-                    <a asp-controller="News" asp-action="Details" asp-route-id="@item.Id">
-                        <img src="~/img/@item.NewsImg" class="d-block " style="width:100%;height:400px">
+                    <a target="_blank" asp-controller="News" asp-action="Details" asp-route-id="@item.Id">
+                        <img src="~/img/@item.News.NewsImg" class="d-block " style="width:100%;height:400px">
                         <div class="carousel-caption d-none d-md-block">
                             <h4 style="border-radius:10px;background-color:white" class=" text-dark">@item.NewsTitle</h4>
                             <h2 style="text-align:center;width:400px;border-radius:10px;background-color:black" class=" text-danger">
@@ -51,14 +50,14 @@
                     </a>
                 </div>
             }
-        }
+        }  
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
 </div>
